added header html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Jaime Vilches</title>
 </head>
 <body>
-    
+    <header>
+ <!-- Class for title background -->
+        <span class="background title">
+            <h1>Jaime Vilches</h1>
+        </span>
+        <nav>
+            <ul class="effects">
+                <li>
+                    <!-- Anchor elements -->
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+                <li> 
+                    <a href="" download>Resume</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
-</html>
+</html> 
