added hero and about me sections

--- a/index.html
+++ b/index.html
@@ -32,5 +32,28 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Hero section -->
+    <section class="hero">
+        <div class="hero-subtitle">           
+                <span class="background subtitle">Be Kind</span>
+        </div>
+    </section>
+
+    <!-- About Me article-->
+    <article> 
+        <div id="about-me" class="about-me">
+            <div class="about-me-grid-container">
+                <div class="about-me-item about-me-title">
+                </div>
+                <div class="about-me-item goals">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio asperiores corrupti laboriosam commodi, tempore numquam animi fuga blanditiis repudiandae quis, facere rerum iusto, natus incidunt magnam consequatur enim veritatis exercitationem?</p>
+                </div>
+                <div class="about-me-item info">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi culpa suscipit dolores vero, dignissimos vel, quasi deserunt nihil pariatur architecto in odio? Quis maxime itaque sapiente aspernatur eos. Quo, atque!</p>
+                </div>  
+            </div>
+        </div> 
+    </article>
 </body>
 </html> 
