added about me and work to index

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 
     <!-- About Me article-->
     <article> 
-        <div id="about-me" class="about-me">
+        <div id="about-me" class="about-me-wrap">
             <div class="about-me-grid-container">
                 <div class="about-me-item about-me-title">
+                    <p>About Me</p>
                 </div>
                 <div class="about-me-item goals">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio asperiores corrupti laboriosam commodi, tempore numquam animi fuga blanditiis repudiandae quis, facere rerum iusto, natus incidunt magnam consequatur enim veritatis exercitationem?</p>
@@ -54,6 +55,25 @@
                 </div>  
             </div>
         </div> 
+    </article>
+
+    <article>
+        <div class="work-wrapper">
+            <div class="work-grid-container">
+                <div class="work-item work-title">
+                    Work
+                </div>
+                <div class="work-item-project challenge-1-refactor">
+                    <span class="span-background">
+                        <h3>Horiseon Services</h3>
+                        <span class="lower-text">HTML/CSS</span>
+                    </span>
+                </div>
+                <div class="work-item-project run-buddy image">
+                    <span class="span-background">
+                        <h3>Run Buddy Project</h3>
+                        <span class="lower-text">HTML/CSS</span>
+                </div>
     </article>
 </body>
 </html> 
