added css to about me

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                 <div class="work-item work-title">
                     Work
                 </div>
-                <div class="work-item-project challenge-1-refactor">
+                <div class="work-item-project challenge-1">
                     <span class="span-background">
                         <h3>Horiseon Services</h3>
                         <span class="lower-text">HTML/CSS</span>
                     </span>
                 </div>
-                <div class="work-item-project run-buddy image">
+                <div class="work-item-project run-buddy">
                     <span class="span-background">
                         <h3>Run Buddy Project</h3>
                         <span class="lower-text">HTML/CSS</span>
