added contact info html and css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Jaime Vilches</title>
 </head>
+
 <body>
     <header>
- <!-- Class for title background -->
+        <!-- Class for title background -->
         <span class="background title">
             <h1>Jaime Vilches</h1>
         </span>
@@ -26,7 +28,7 @@
                 <li>
                     <a href="#contact-me">Contact Me</a>
                 </li>
-                <li> 
+                <li>
                     <a href="" download>Resume</a>
                 </li>
             </ul>
@@ -36,44 +38,95 @@
     <!-- Hero section -->
     <section class="hero">
         <div class="hero-subtitle">
-                <span class="background subtitle">Be Kind</span>
+            <span class="background subtitle">Be Kind</span>
         </div>
     </section>
 
     <!-- About Me article-->
-    <article> 
-        <div id="about-me" class="about-me-wrap">
-            <div class="about-me-grid-container">
-                <div class="about-me-item about-me-title">
-                    <p>About Me</p>
-                </div>
-                <div class="about-me-item goals">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio asperiores corrupti laboriosam commodi, tempore numquam animi fuga blanditiis repudiandae quis, facere rerum iusto, natus incidunt magnam consequatur enim veritatis exercitationem?</p>
-                </div>
-                <div class="about-me-item info">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi culpa suscipit dolores vero, dignissimos vel, quasi deserunt nihil pariatur architecto in odio? Quis maxime itaque sapiente aspernatur eos. Quo, atque!</p>
-                </div>  
+    <!-- <div class="container"> -->
+    <main>
+        <section id="about-me" class="about-me-wrap">
+            <div class="me">
+                <h2>About Me</h2>
             </div>
-        </div> 
-    </article>
+            <div class="me-info">
 
-    <article>
-        <div class="work-wrapper">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio asperiores corrupti laboriosam
+                    commodi, tempore numquam animi fuga blanditiis repudiandae quis, facere rerum iusto, natus incidunt
+                    magnam consequatur enim veritatis exercitationem?</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi culpa suscipit dolores vero,
+                    dignissimos vel, quasi deserunt nihil pariatur architecto in odio? Quis maxime itaque sapiente
+                    aspernatur eos. Quo, atque!</p>
+            </div>
+        </section>
+
+
+
+
+        <section class="about-me-wrap" id="work">
+
+            <div class="me">
+                <h2>Work</h2>
+            </div>
+
             <div class="work-grid-container">
-                <div class="work-item work-title">
-                    Work
-                </div>
-                <div class="work-item-project challenge-1">
-                    <span class="span-background">
+
+
+                <a href="" class="work-item-project challenge-1">
+                    <div class="me-info">
                         <h3>Horiseon Services</h3>
-                        <span class="lower-text">HTML/CSS</span>
-                    </span>
-                </div>
-                <div class="work-item-project run-buddy">
-                    <span class="span-background">
+                        <span>HTML/CSS</span>
+                    </div>
+                </a>
+
+
+
+                <a href="" class="work-item-project run-buddy">
+                    <div>
                         <h3>Run Buddy Project</h3>
-                        <span class="lower-text">HTML/CSS</span>
-                </div>
-    </article>
+                        <span>HTML/CSS</span>
+                        </div>  
+                </a>
+
+                <a href="" class="work-item-project run-buddy">
+                    <div>
+                        <h3>Run Buddy Project</h3>
+                        <span>HTML/CSS</span>
+                        </div>  
+                </a>
+
+                
+                <a href="" class="work-item-project run-buddy">
+                    <div>
+                        <h3>Run Buddy Project</h3>
+                        <span>HTML/CSS</span>
+                        </div>  
+                </a>
+
+
+
+
+            </div>
+        </section>
+
+        <section class="about-me-wrap" id="contact-me">
+            <div class="me">
+                <h2>Contact Me</h2>
+            </div>
+            <div class="me-info">
+              <div class="info">
+                <a href="tel:+15555555555">555.555.5555</a>
+                <a href="mailto:lernantino@website.com">lernantino@website.com</a>
+                <a href="#">GitHub</a>
+                <a href="#">Twitter</a>
+                <a href="#">Spotify</a>
+              </div>
+            </div>
+          </section>
+        <!-- </div> -->
+
+    </main>
 </body>
-</html> 
+
+</html>
