added final css touches

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="work-grid-container">
 
 
-                <a href="" class="work-item-project challenge-1">
+                <a href="" class=" work-item-project first challenge-1 ">
                     <div class="me-info">
                         <h3>Horiseon Services</h3>
                         <span>HTML/CSS</span>
@@ -82,26 +82,33 @@
 
 
 
-                <a href="" class="work-item-project run-buddy">
+                <a href="http://jaimevilches87.github.io/run-buddy/" class="work-item-project run-buddy">
                     <div>
                         <h3>Run Buddy Project</h3>
                         <span>HTML/CSS</span>
-                        </div>  
+                    </div>
                 </a>
 
-                <a href="" class="work-item-project run-buddy">
+                <a href="http://jaimevilches87.github.io/taskinator/" class="work-item-project taskinator">
                     <div>
-                        <h3>Run Buddy Project</h3>
-                        <span>HTML/CSS</span>
-                        </div>  
+                        <h3>Taskinator</h3>
+                        <span>JavaScript/CSS</span>
+                    </div>
                 </a>
 
-                
-                <a href="" class="work-item-project run-buddy">
+
+                <a href=" http://jaimevilches87.github.io/Code-Quiz" class="work-item-project code-quiz">
                     <div>
-                        <h3>Run Buddy Project</h3>
-                        <span>HTML/CSS</span>
-                        </div>  
+                        <h3>Code Quiz</h3>
+                        <span>Javascript/CSS</span>
+                    </div>
+                </a>
+
+                <a href="http://jaimevilches87.github.io/work-day-planner/" class="work-item-project work-day">
+                    <div>
+                        <h3>Day Planner</h3>
+                        <span>Jquery/Javascript/CSS</span>
+                    </div>
                 </a>
 
 
@@ -115,15 +122,15 @@
                 <h2>Contact Me</h2>
             </div>
             <div class="me-info">
-              <div class="info">
-                <a href="tel:+15555555555">555.555.5555</a>
-                <a href="mailto:lernantino@website.com">lernantino@website.com</a>
-                <a href="#">GitHub</a>
-                <a href="#">Twitter</a>
-                <a href="#">Spotify</a>
-              </div>
+                <div class="info">
+                    <a href="tel:+15555555555">555.555.5555</a>
+                    <a href="mailto:JaimeVilches87@gmail.com">JaimeVilches87@gmail.com</a>
+                    <a href="#">GitHub</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Spotify</a>
+                </div>
             </div>
-          </section>
+        </section>
         <!-- </div> -->
 
     </main>
